# hseml-group-project-malkovila

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
deploy/: bundle.py
deploy/hf_space/: README.md  app.py  requirements.txt
feedback/: feedback.md
models/: text_svd_meta.json
notebooks/: 01_eda.ipynb  02_parse_titles.ipynb  03_features.ipynb  04_baseline.ipynb  05_cp2_features.ipynb  06_cp2_experiments.ipynb  07_dim_reduction.ipynb
report/: report.md
report/tables/: baseline_metrics.csv  baseline_metrics.json  cp1_validation_summary.csv  experiments_cp1.csv  experiments_cp2.csv  feature_drift.csv  final_metrics.csv  final_model_summary.json  permutation_importance.csv  time_split_metrics.csv
scripts/: generate_deploy_screenshots.py
src/: config.py
src/api/: __init__.py  app.py  schemas.py
src/data/: download.py  parse_titles.py
src/deploy/: __init__.py  streamlit_app.py
src/features/: build_dataset.py  build_dataset_full.py  drift_report.py  readability.py  text_vectorizers.py  time_split.py  title_features.py
src/inference/: __init__.py  context_features.py  csv_title_features.py  feature_builder.py  predictor.py
src/modeling/: baseline.py  dim_reduction.py  experiments.py  experiments_cp2.py  final_model.py  (+3 more)
tests/: test_api.py  test_features.py  test_inference.py  test_metrics.py  test_parser.py  test_split.py  test_tuners_smoke.py
(+3 files in other folders)
