[project]
name = "news-title-virality"
version = "0.1.0"
description = "Предсказание вирусности новостного заголовка по лингвистическим и структурным признакам."
authors = [{ name = "Ilya Malkov", email = "idmalkov@edu.hse.ru" }]
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "data",
    "models",
    "notebooks",
    "report",
    "presentation",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
